--- a/app/src/main/res/drawable/out_line.xml
+++ b/app/src/main/res/drawable/out_line.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:width="1dp"
-        android:color="#000"/>
+        android:width="2dp"
+        android:color="@color/colorPrimary"/>
     <corners
         android:radius="3dp"/>
     <padding
