--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,16 +57,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Login"
-                android:onClick="Login"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="Reset"
-                android:onClick="Reset"/>
+                android:onClick="Login"
+                android:layout_margin="5dp"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/colorAccent"/>
         </RelativeLayout>
     </LinearLayout>
 
