--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -66,7 +66,8 @@
             android:layout_width="100dp"
             app:cardElevation="5dp"
             app:cardCornerRadius="3dp"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:onClick="KeyInformants">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
