--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -13,16 +13,17 @@
         android:columnCount="2"
         android:layout_centerInParent="true">
         <android.support.v7.widget.CardView
-            android:layout_height="125dp"
-            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_width="150dp"
             app:cardElevation="5dp"
             app:cardCornerRadius="3dp"
             android:layout_margin="10dp"
             android:onClick="OpenHouse">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_gravity="center"
                 android:padding="5dp">
                 <ImageView
                     android:layout_width="match_parent"
@@ -38,15 +39,16 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
-            android:layout_height="125dp"
-            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_width="150dp"
             app:cardElevation="5dp"
             app:cardCornerRadius="3dp"
             android:layout_margin="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_gravity="center"
                 android:padding="5dp">
                 <ImageView
                     android:layout_width="match_parent"
@@ -62,16 +64,17 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
-            android:layout_height="125dp"
-            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_width="150dp"
             app:cardElevation="5dp"
             app:cardCornerRadius="3dp"
             android:layout_margin="10dp"
             android:onClick="KeyInformants">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_gravity="center"
                 android:padding="5dp">
                 <ImageView
                     android:layout_width="match_parent"
@@ -87,15 +90,16 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
-            android:layout_height="125dp"
-            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_width="150dp"
             app:cardElevation="5dp"
             app:cardCornerRadius="3dp"
             android:layout_margin="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_gravity="center"
                 android:padding="5dp">
                 <ImageView
                     android:layout_width="match_parent"
