--- a/app/src/main/res/layout/activity_house_hold.xml
+++ b/app/src/main/res/layout/activity_house_hold.xml
@@ -274,6 +274,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:focusable="true"
                         android:hint="Name of Male Adult (Age of Adult)"
                         android:id="@+id/HouseHoldSizeAdultMaleBefore"/>
                 </android.support.design.widget.TextInputLayout>
@@ -1247,21 +1248,12 @@
                 android:layout_alignParentRight="true"
                 android:onClick="Submit"
                 android:background="@color/colorPrimary"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/Reset"
-                android:text="New Data"
-                android:layout_margin="10dp"
-                android:layout_alignParentLeft="true"
-                android:onClick="SubmitAgain"
-                android:background="@color/colorPrimary"/>
 
             <Button
                 android:id="@+id/BackToMenu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/Reset"
+                android:layout_alignParentLeft="true"
                 android:onClick="BackToMenu"
                 android:layout_margin="10dp"
                 android:text="Back To Menu"
