--- a/app/src/main/res/layout/activity_focus_group.xml
+++ b/app/src/main/res/layout/activity_focus_group.xml
@@ -23,7 +23,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="FOCUS GROUP DISCUSSIOn QUESTIONS"
+                    android:text="FOCUS GROUP DISCUSSION QUESTIONS"
                     android:textAlignment="center"
                     android:textSize="16sp"
                     android:textStyle="bold"
