--- a/app/src/main/res/layout/activity_key_informants.xml
+++ b/app/src/main/res/layout/activity_key_informants.xml
@@ -254,7 +254,7 @@
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/InformantAge"
+                        android:id="@+id/CommunityInformantAge"
                         android:hint="Informant Age"/>
                 </RadioGroup>
                 <TextView
@@ -300,7 +300,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Name of Male Children (Age of Adult)"
-                        android:id="@+id/COMMUNITYSizeChildrenMmaleBefore"/>
+                        android:id="@+id/COMMUNITYSizeChildrenMaleBefore"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -350,7 +350,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Name of Male Children (Age of Adult)"
-                        android:id="@+id/COMMUNITYSizeChildrenMmaleAfter"/>
+                        android:id="@+id/COMMUNITYSizeChildrenMaleAfter"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -2435,7 +2435,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="PoliceS tation"
+                    android:hint="Police Station"
                     android:id="@+id/PoliceStation"/>
             </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
@@ -3381,6 +3381,31 @@
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/pushBtn"
+                android:text="Submit"
+                android:layout_margin="10dp"
+                android:layout_alignParentRight="true"
+                android:onClick="Submit"
+                android:background="@color/colorPrimary"/>
+
+            <Button
+                android:id="@+id/BackToMenu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:onClick="BackToMenu"
+                android:layout_margin="10dp"
+                android:text="Back To Menu"
+                android:background="@color/colorPrimary"
+                android:padding="5dp"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
