--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -95,7 +95,8 @@
             android:layout_width="150dp"
             app:cardElevation="5dp"
             app:cardCornerRadius="3dp"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:onClick="OpenHelp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
