--- a/app/src/main/res/layout/activity_key_informants.xml
+++ b/app/src/main/res/layout/activity_key_informants.xml
@@ -2999,7 +2999,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Have some members of of the community lost some of their belongings in their household due to the insurgency?"
+                    android:text="Have some members of the community lost some of their belongings in their household due to the insurgency?"
                     android:textStyle="bold"
                     android:background="@drawable/out_line"
                     android:padding="10dp"/>
