--- a/app/src/main/res/layout/activity_house_hold.xml
+++ b/app/src/main/res/layout/activity_house_hold.xml
@@ -87,43 +87,8 @@
                         android:layout_height="wrap_content"
                         android:hint="Town/Village"
                         android:id="@+id/TownVillage"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Geographical Location:"
-                            android:textStyle="bold"
-                            android:layout_margin="5dp"/>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-                            <android.support.design.widget.TextInputLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="5dp">
 
-                                <android.support.design.widget.TextInputEditText
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="Longitude"
-                                    android:id="@+id/Longitude"/>
-                            </android.support.design.widget.TextInputLayout>
-                            <android.support.design.widget.TextInputLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="5dp">
 
-                                <android.support.design.widget.TextInputEditText
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="Latitude"
-                                    android:id="@+id/Latitude"/>
-                            </android.support.design.widget.TextInputLayout>
-                        </LinearLayout>
-                    </LinearLayout>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -1327,6 +1292,40 @@
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardElevation="3dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+                    android:id="@+id/Longitude"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/GetLocation"
+                    android:layout_gravity="center"
+                    android:text="Get Location"
+                    android:layout_margin="10dp"
+                    android:onClick="GetLocationDetails"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
 
         <RelativeLayout
             android:layout_width="match_parent"
