--- a/app/src/main/res/layout/activity_key_informants.xml
+++ b/app/src/main/res/layout/activity_key_informants.xml
@@ -107,33 +107,6 @@
                             android:text="Geographical Location:"
                             android:textStyle="bold"
                             android:layout_margin="5dp"/>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-                            <android.support.design.widget.TextInputLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="5dp">
-
-                                <android.support.design.widget.TextInputEditText
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="Longitude"
-                                    android:id="@+id/Longitude"/>
-                            </android.support.design.widget.TextInputLayout>
-                            <android.support.design.widget.TextInputLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="5dp">
-
-                                <android.support.design.widget.TextInputEditText
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:hint="Latitude"
-                                    android:id="@+id/Latitude"/>
-                            </android.support.design.widget.TextInputLayout>
-                        </LinearLayout>
                     </LinearLayout>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
@@ -4715,7 +4688,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Month and Year"
+                        android:hint="How many times?"
                         android:id="@+id/Livelihood2"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
@@ -4872,7 +4845,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Has aby person that relocated as a result of the Boko Haram insurgency returned to the community?"
+                    android:text="Has any person that relocated as a result of the Boko Haram insurgency returned to the community?"
                     android:textStyle="bold"
                     android:background="@drawable/out_line"
                     android:padding="10dp"/>
@@ -5147,6 +5120,40 @@
                         android:id="@+id/Livelihood29"/>
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardElevation="3dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+                    android:id="@+id/cLongitude"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/GetLocation"
+                    android:layout_gravity="center"
+                    android:text="Get Location"
+                    android:layout_margin="10dp"
+                    android:onClick="cGetLocationDetails"/>
+
+            </LinearLayout>
+
         </android.support.v7.widget.CardView>
 
         <RelativeLayout
