--- a/app/src/main/res/layout/activity_focus_group.xml
+++ b/app/src/main/res/layout/activity_focus_group.xml
@@ -482,6 +482,39 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            app:cardElevation="5dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+                    android:id="@+id/fLongitude"
+                    android:layout_margin="10dp"
+                    android:layout_gravity="center"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/GetLocation"
+                    android:layout_gravity="center"
+                    android:text="Get Location"
+                    android:layout_margin="10dp"
+                    android:onClick="fGetLocationDetails"/>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
