--- a/app/src/main/res/layout/activity_house_hold.xml
+++ b/app/src/main/res/layout/activity_house_hold.xml
@@ -1275,7 +1275,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="What do you thing can make your household sustainable?"
+                android:text="What do you think can make your household sustainable?"
                 android:textStyle="bold"
                 android:layout_margin="5dp"/>
             <android.support.design.widget.TextInputLayout
@@ -1295,7 +1295,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             app:cardElevation="3dp">
 
             <LinearLayout
