--- a/app/src/main/res/layout/activity_key_informants.xml
+++ b/app/src/main/res/layout/activity_key_informants.xml
@@ -5200,12 +5200,6 @@
                     android:layout_margin="5dp"
                     android:text="What do you think can make your community sustainable?"
                     android:textStyle="bold" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:text="What do you think can make your community sustainable?"
-                    android:textStyle="italic" />
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -5242,7 +5236,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
