--- a/app/src/main/res/layout/activity_key_informants.xml
+++ b/app/src/main/res/layout/activity_key_informants.xml
@@ -275,7 +275,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name of Male Adult (Age of Adult)"
+                        android:hint="Number of Male Adult"
                         android:id="@+id/COMMUNITYSizeAdultMaleBefore"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
@@ -286,7 +286,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name of Female Adult (Age of Adult)"
+                        android:hint="Number of Female Adult"
                         android:id="@+id/COMMUNITYSizeAdultFemaleBefore"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
@@ -297,7 +297,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name of Male Children (Age of Adult)"
+                        android:hint="Number of Male Children"
                         android:id="@+id/COMMUNITYSizeChildrenMaleBefore"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
@@ -308,7 +308,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name of Female Children (Age of Adult)"
+                        android:hint="Number of Female Children"
                         android:id="@+id/COMMUNITYSizeChildrenFemaleBefore"/>
                 </android.support.design.widget.TextInputLayout>
                 <TextView
@@ -325,7 +325,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name of Male Adult (Age of Adult)"
+                        android:hint="Number of Male Adult"
                         android:id="@+id/COMMUNITYSizeAdultMaleAfter"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
@@ -336,7 +336,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name of Female Adult (Age of Adult)"
+                        android:hint="Number of Female Adult"
                         android:id="@+id/COMMUNITYSizeAdultFemaleAfter"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
@@ -347,7 +347,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name of Male Children (Age of Adult)"
+                        android:hint="Number of Male Children"
                         android:id="@+id/COMMUNITYSizeChildrenMaleAfter"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
@@ -358,7 +358,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Name of Female Children (Age of Adult)"
+                        android:hint="Number of Female Children"
                         android:id="@+id/COMMUNITYSizeChildrenFemaleAfter"/>
                 </android.support.design.widget.TextInputLayout>
                 <TextView
@@ -546,7 +546,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Death"
+                            android:hint="Date (Month and Year)"
                             android:id="@+id/AttackedDeath"/>
                     </android.support.design.widget.TextInputLayout>
                     <android.support.design.widget.TextInputLayout
@@ -557,7 +557,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Missing/Unaccounted"
+                            android:hint="Number of Missing/Unaccounted Persons"
                             android:id="@+id/AttackedMissing"/>
                     </android.support.design.widget.TextInputLayout>
 
